@@ -88,13 +88,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-  * log_server_status: Bring Perl style forward to the present, use
-    standard modules, update for new format of server-status output.
-    Trunk patch: http://people.apache.org/~rbowen/log_server_status.trunk.patch
-      (Revisions r1325218 through r1325275)
-    2.4 patch: Trunk patch works
-    +1: rbowen, jim, sf
-
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
 
